@@ -7,6 +7,8 @@
 					http://gollem.science.uva.nl/bugzilla/
 					--------------------------------------
 
+  * FIXED: Control-C <abort> keeps ringing the bell.  Ulrich Neumerkel.
+
 =================================
 VERSION 5.6.26 (January 19, 2007)
 =================================
